test/tests/stages/18_structures/invalid_types/invalid_incomplete_structs/incomplete_ptr_addition.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[23]:
  struct
  identifier(s)
  ;
  extern
  struct
  identifier(s)
  *
  identifier(ptr)
  ;
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(ptr)
  +
  const int(0)
  ==
  identifier(ptr)
  ;
  }
